# Glacius

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Chat.txt  Dockerfile  Items.txt  README.md  Server - todo.txt  ToL_Net_Login.txt  ToL_Net_World.txt  World Map.txt
.github/workflows/: docker-build.yml
RCC/src/: main.cpp
dependencies/BlueShine/: CMakeLists.txt
dependencies/BlueShine/include/: BlueShine.h
dependencies/BlueShine/src/: BlueShine.cpp  DynamicArray.hpp  IdHandling.hpp  ShineDB.cpp  ShineDB.hpp  ShineResult.cpp  ShineResult.hpp  mysql.hpp
docker/: DB-r01.sql  docker-compose.yml  glacius.cfx2  run-db.sh  run.sh
src/: Config.cpp  Config.hpp  Database.cpp  Database.hpp  Glacius.cpp  IOUtil.cpp  IOUtil.hpp  LoginServer.cpp  LoginServer.hpp  PubSub.hpp  ServerState.hpp  StatusServer.cpp  StatusServer.hpp  Util.hpp  WorldServer.cpp  WorldServer.hpp
